--- a/production/production.yml
+++ b/production/production.yml
@@ -72,7 +72,8 @@ services:
           fi;
         done &&
         echo "sites/common_site_config.json found" &&
-        bench new-site --no-mariadb-socket --admin-password ${ADMIN_PASS} --db-root-password ${DB_ROOT_PASS} --install-app payment erpnext hospitality hrms non_profit india_compliance grillax_restaurant ury_offline --set-default ${SITE_NAME};
+        bench new-site --no-mariadb-socket --admin-password ${ADMIN_PASS} --db-root-password ${DB_ROOT_PASS} --set-default ${SITE_NAME};
+        bench --site ${SITE_NAME} install-app payment erpnext hospitality hrms non_profit india_compliance grillax_restaurant ury_offline;
 
   db:
     image: mariadb:10.6
